Doc changes, addition of jQuery subscription form in that control panel,

--- a/dada/templates/html_code_screen.tmpl
+++ b/dada/templates/html_code_screen.tmpl
@@ -3,7 +3,7 @@
 <!-- tmpl_set name="title" value="Appearance and Templates &#187; Subscription Form HTML" -->
 
 <div id="screen_meta" data-menu_highlight="html_code"></div>
-
+<div id="html_code"></div>
 
 <div id="screentitle"> 
 	<div id="screentitlepadding">
@@ -13,37 +13,76 @@
 </div>
 
 
+<div id="tabs"> 
+	<ul>
+		<li>
+			<a href="#modal_menu">
+				Modal Menu Subscription Form
+			</a>
+		</li>
+		<li>
+			<a href="#full">
+				Full Subscription Form
+			</a>
+		</li>
+
+		<li>
+			<a href="#minimal">
+				Minimal Subscription Form
+			</a>
+		</li>
 
 
-<h1>Full Subscription Form</h1>
-	
-<fieldset>
-<legend>
-HTML</legend>
+		</ul>
 
 
- <p>
-  Copy the code in the text box and add it to any page on your site.
- </p>
+<div id="modal_menu"> 
+     <fieldset>
+     <p>Place the following in the head of your page:</p>       
+     <textarea cols="50" rows="12">
+     <!-- tmpl_var jquery_head_code escape="HTML" -->
+     </textarea>
 
- <textarea name="code" cols="50" rows="12">
-    <!-- tmpl_var subscription_form escape="HTML" --> 
- </textarea>
-</fieldset>
+     <p>Place the following in the body of your page:</p> 
+     <textarea cols="50" rows="12">
+         <!-- tmpl_var jquery_body_code escape="HTML" -->
+     </textarea>
+
+     <form action="<!-- tmpl_var S_PROGRAM_URL -->" method="post" target="_blank">
+     <p style="text-align:center"> 
+             <input type="hidden" name="f" value="preview_jquery_plugin_subscription_form">
+             <input type="submit" class="bigger_button processing preview_jquery_plugin_subscription_form" value="View Working Preview...">
+     </p> 
+     </form> 
+     </fieldset>
+</div> 
+
+
+<div id="full"> 
+    <fieldset>
+    <legend>
+    HTML</legend>
+     <p>
+      Copy the code in the text box and add it to any page on your site.
+     </p>
+
+     <textarea name="code" cols="50" rows="12">
+        <!-- tmpl_var subscription_form escape="HTML" --> 
+     </textarea>
+    </fieldset>
 
 
 
-<fieldset>
-<legend>
-Working Preview</legend>
-<!-- tmpl_var subscription_form  -->
+    <fieldset>
+    <legend>
+    Working Preview</legend>
+    <!-- tmpl_var subscription_form  -->
 
-</fieldset> 
+    </fieldset> 
+</div> 
 
-<hr /> 
-
-<h1>Minimal Subscription Form</h1> 
-
+<div id="minimal"> 
+    
 	
 	<fieldset>
 	<legend>
@@ -60,7 +99,10 @@ Working Preview</legend>
 	Working Preview</legend>
 <!-- tmpl_include minimal_subscription_form.tmpl -->
 	</fieldset>
-	
+</div> 
+
+</div> 
+
 	
 
 
