fix this one up, too

--- a/dada/templates/mass_mailing_preferences_screen.tmpl
+++ b/dada/templates/mass_mailing_preferences_screen.tmpl
@@ -7,7 +7,7 @@
 
 
 
-<!-- tmpl_set name="title" value="Mail Sending &#187; Mass Mailing Preferences" -->
+<!-- tmpl_set name="title" value="Mail Sending &#187; Mass Mailing Options" -->
 <div id="screentitle"> 
 	<div id="screentitlepadding">
 		<!-- tmpl_var title --> 
@@ -184,7 +184,7 @@
   <td>
    <p>
     <label for="auto_pickup_dropped_mailings">
-     Auto-Pickup Dropped List Message Mailings
+     Auto-Pickup Dropped Mass Mailings
     </label>
     <br />
 
