--- a/dada/templates/amazon_ses_get_stats_widget.tmpl
+++ b/dada/templates/amazon_ses_get_stats_widget.tmpl
@@ -12,8 +12,14 @@
 				<strong>
 					<!-- tmpl_var Max24HourSend --> messages
 				</strong> 
-				every 24 hours. 
-	
+				every 24 hours 
+				
+				(<strong><!-- tmpl_var allowed_sending_quota_percentage -->%</strong>
+				
+				 which can be utlized by <!-- tmpl_var PROGRAM_NAME -->). 
+				 
+			 </p>
+			 <p>
 				<strong>
 					<!-- tmpl_var SentLast24Hours --> messages
 				</strong>
