--- a/dada/templates/example_dada_config.tmpl
+++ b/dada/templates/example_dada_config.tmpl
@@ -232,13 +232,22 @@ $RECAPTHCA_MAILHIDE_PARAMS = {
 
 
 
+<!-- tmpl_if configure_global_mailing_list_options --> 
+#---------------------------------------------------------------------#
+# Global Mailing List Options 
+
+$GLOBAL_UNSUBSCRIBE = <!-- tmpl_var global_mailing_list_options_GLOBAL_UNSUBSCRIBE default="0" -->;
+$GLOBAL_BLACK_LIST  = <!-- tmpl_var global_mailing_list_options_GLOBAL_BLACK_LIST  default="0" -->;
+<!-- /tmpl_if -->
+
+
 <!-- tmpl_if configure_mass_mailing --> 
 #---------------------------------------------------------------------#
 # Mass Mailing Options 
 
 $MAILOUT_AT_ONCE_LIMIT = <!-- tmpl_var mass_mailing_MAILOUT_AT_ONCE_LIMIT default="1" -->; 
 $MULTIPLE_LIST_SENDING = <!-- tmpl_var mass_mailing_MULTIPLE_LIST_SENDING default="0" -->; 
-$MAILOUT_STALE_AFTER   = <!-- tmpl_var mass_mailing_MAILOUT_STALE_AFTER  default="86400" -->; 
+$MAILOUT_STALE_AFTER   = <!-- tmpl_var mass_mailing_MAILOUT_STALE_AFTER   default="86400" -->; 
 <!-- /tmpl_if -->
 
 
