little spelling mistake, there.

--- a/dada/templates/amazon_ses_get_stats_widget.tmpl
+++ b/dada/templates/amazon_ses_get_stats_widget.tmpl
@@ -16,7 +16,7 @@
 				
 				(<strong><!-- tmpl_var allowed_sending_quota_percentage -->%</strong>
 				
-				 which can be utlized by <!-- tmpl_var PROGRAM_NAME -->). 
+				 which can be utilized by <!-- tmpl_var PROGRAM_NAME -->). 
 				 
 			 </p>
 			 <p>
