--- a/dada/templates/example_dada_config.tmpl
+++ b/dada/templates/example_dada_config.tmpl
@@ -281,42 +281,43 @@ $AMAZON_SES_OPTIONS = {
 
 
 
-
+<!-- tmpl_if cut_list_settings_default -->
 # start cut for list settings defaults
 =cut
-
+<!-- /tmpl_if -->
 %LIST_SETUP_INCLUDE = (
 	set_smtp_sender              => 1, # For SMTP
 	add_sendmail_f_flag          => 1, # For Sendmail Command
-	admin_email                  => 'bounces@example.com',
+	admin_email                  => '<!-- tmpl_var bounce_handler_Address default="" -->',
 );
-
+<!-- tmpl_if cut_list_settings_default -->
 =cut
 # end cut for list settings defaults
+<!-- /tmpl_if -->
 
 
 
-
-
+<!-- tmpl_if cut_plugin_configs -->
 # start cut for plugin configs
 =cut
+<!-- /tmpl_if -->
 
 $PLUGIN_CONFIGS = { 
 
 	Bounce_Handler => {
-		Server                      => undef,
-		Username                    => undef,
-		Password                    => undef,
-		Port                        => undef,
-		USESSL                      => undef,
-		AUTH_MODE                   => undef,
-		Plugin_Name                 => undef,
-		Plugin_URL                  => undef,
-		Allow_Manual_Run            => undef,
-		Manual_Run_Passcode         => undef,
-		Enable_POP3_File_Locking    => undef, 
+		Server                      => '<!-- tmpl_var bounce_handler_Server default=""-->',
+		Username                    => '<!-- tmpl_var bounce_handler_Username default=""-->',
+		Password                    => '<!-- tmpl_var bounce_handler_Password default=""-->',
+		Port                        => '<!-- tmpl_var bounce_handler_Port default="AUTO"-->',
+		USESSL                      => '<!-- tmpl_var bounce_handler_USESSL default="0"-->',
+		AUTH_MODE                   => '<!-- tmpl_var bounce_handler_AUTH_MODE default="BEST"-->',
+		Plugin_Name                 => '<!-- tmpl_var bounce_handler_Plugin_Name default="Bounce Handler"-->',
+		Plugin_URL                  => '<!-- tmpl_var bounce_handler_Plugin_URL default=""-->',
+		Allow_Manual_Run            => '<!-- tmpl_var bounce_handler_Allow_Manual_Run default="1"-->',
+		Manual_Run_Passcode         => '<!-- tmpl_var bounce_handler_Manual_Run_Passcode default="1"-->',
+		Enable_POP3_File_Locking    => '<!-- tmpl_var bounce_handler_Enable_POP3_File_Locking default="1"-->', 
 		Log                         => undef,
-		MessagesAtOnce              => undef,
+		MessagesAtOnce              => '<!-- tmpl_var bounce_handler_MessagesAtOnce default="100"-->',
 		Max_Size_Of_Any_Message     => undef,
 		Rules                       => undef,
 
@@ -334,18 +335,18 @@ $PLUGIN_CONFIGS = {
 	
 	Bridge => {
 
-		Plugin_Name                         => undef,
-		Plugin_URL                          => undef,
-		Allow_Manual_Run                    => undef,
-		Manual_Run_Passcode                 => undef,
-		MessagesAtOnce                      => undef,
-		Soft_Max_Size_Of_Any_Message        => undef,
-		Max_Size_Of_Any_Message             => undef,
-		Allow_Open_Discussion_List          => undef,
-		Room_For_One_More_Check             => undef,
-		Enable_POP3_File_Locking            => undef,
-		Check_List_Owner_Return_Path_Header => undef,
-		Check_Multiple_Return_Path_Headers  => undef,
+        Plugin_Name                         => '<!-- tmpl_var bridge_Plugin_Name default="Bridge"-->',
+        Plugin_URL                          => '<!-- tmpl_var bridge_Plugin_URL default=""-->',
+        Allow_Manual_Run                    => '<!-- tmpl_var bridge_Allow_Manual_Run default="1"-->',
+        Manual_Run_Passcode                 => '<!-- tmpl_var bridge_Manual_Run_Passcode default=""-->',
+        MessagesAtOnce                      => '<!-- tmpl_var bridge_MessagesAtOnce default="100"-->',
+        Soft_Max_Size_Of_Any_Message        => '<!-- tmpl_var bridge_Soft_Max_Size_Of_Any_Message default="1048576"-->',
+        Max_Size_Of_Any_Message             => '<!-- tmpl_var bridge_Max_Size_Of_Any_Message default="2621440"-->',
+        Allow_Open_Discussion_List          => 0,
+        Room_For_One_More_Check             => '<!-- tmpl_var bridge_Room_For_One_More_Check default="1"-->',
+        Enable_POP3_File_Locking            => '<!-- tmpl_var bridge_Enable_POP3_File_Locking default="1"-->',
+        Check_List_Owner_Return_Path_Header => '<!-- tmpl_var bridge_Check_List_Owner_Return_Path_Header default="1"-->',
+        Check_Multiple_Return_Path_Headers  => '<!-- tmpl_var bridge_Check_Multiple_Return_Path_Headers default="0"-->',
 
     },
 
@@ -408,10 +409,10 @@ $PLUGIN_CONFIGS = {
 	},
 
 };
-
+<!-- tmpl_if cut_plugin_configs -->
 =cut
 # end cut for plugin configs
-
+<!-- /tmpl_if -->
 
 
 
