This makes setting those plugin config vars a lot cleaner.

--- a/dada/templates/example_dada_config.tmpl
+++ b/dada/templates/example_dada_config.tmpl
@@ -305,19 +305,19 @@ $AMAZON_SES_OPTIONS = {
 $PLUGIN_CONFIGS = { 
 
 	Bounce_Handler => {
-		Server                      => '<!-- tmpl_var bounce_handler_Server default=""-->',
-		Username                    => '<!-- tmpl_var bounce_handler_Username default=""-->',
-		Password                    => '<!-- tmpl_var bounce_handler_Password default=""-->',
-		Port                        => '<!-- tmpl_var bounce_handler_Port default="AUTO"-->',
-		USESSL                      => '<!-- tmpl_var bounce_handler_USESSL default="0"-->',
-		AUTH_MODE                   => '<!-- tmpl_var bounce_handler_AUTH_MODE default="BEST"-->',
-		Plugin_Name                 => '<!-- tmpl_var bounce_handler_Plugin_Name default="Bounce Handler"-->',
-		Plugin_URL                  => '<!-- tmpl_var bounce_handler_Plugin_URL default=""-->',
-		Allow_Manual_Run            => '<!-- tmpl_var bounce_handler_Allow_Manual_Run default="1"-->',
-		Manual_Run_Passcode         => '<!-- tmpl_var bounce_handler_Manual_Run_Passcode default="1"-->',
-		Enable_POP3_File_Locking    => '<!-- tmpl_var bounce_handler_Enable_POP3_File_Locking default="1"-->', 
+		Server                      => <!-- tmpl_var bounce_handler_Server default="''"-->,
+		Username                    => <!-- tmpl_var bounce_handler_Username default="''"-->,
+		Password                    => <!-- tmpl_var bounce_handler_Password default="''"-->,
+		Port                        => <!-- tmpl_var bounce_handler_Port default="AUTO"-->,
+		USESSL                      => <!-- tmpl_var bounce_handler_USESSL default="0"-->,
+		AUTH_MODE                   => <!-- tmpl_var bounce_handler_AUTH_MODE default="'BEST'"-->,
+		Plugin_Name                 => <!-- tmpl_var bounce_handler_Plugin_Name default="'Bounce Handler'"-->,
+		Plugin_URL                  => <!-- tmpl_var bounce_handler_Plugin_URL default="undef"-->,
+		Allow_Manual_Run            => <!-- tmpl_var bounce_handler_Allow_Manual_Run default="1"-->,
+		Manual_Run_Passcode         => <!-- tmpl_var bounce_handler_Manual_Run_Passcode default="1"-->,
+		Enable_POP3_File_Locking    => <!-- tmpl_var bounce_handler_Enable_POP3_File_Locking default="1"-->, 
 		Log                         => undef,
-		MessagesAtOnce              => '<!-- tmpl_var bounce_handler_MessagesAtOnce default="100"-->',
+		MessagesAtOnce              => <!-- tmpl_var bounce_handler_MessagesAtOnce default="100"-->,
 		Max_Size_Of_Any_Message     => undef,
 		Rules                       => undef,
 
@@ -335,18 +335,18 @@ $PLUGIN_CONFIGS = {
 	
 	Bridge => {
 
-        Plugin_Name                         => '<!-- tmpl_var bridge_Plugin_Name default="Bridge"-->',
-        Plugin_URL                          => '<!-- tmpl_var bridge_Plugin_URL default=""-->',
-        Allow_Manual_Run                    => '<!-- tmpl_var bridge_Allow_Manual_Run default="1"-->',
-        Manual_Run_Passcode                 => '<!-- tmpl_var bridge_Manual_Run_Passcode default=""-->',
-        MessagesAtOnce                      => '<!-- tmpl_var bridge_MessagesAtOnce default="100"-->',
-        Soft_Max_Size_Of_Any_Message        => '<!-- tmpl_var bridge_Soft_Max_Size_Of_Any_Message default="1048576"-->',
-        Max_Size_Of_Any_Message             => '<!-- tmpl_var bridge_Max_Size_Of_Any_Message default="2621440"-->',
+        Plugin_Name                         => <!-- tmpl_var bridge_Plugin_Name default="'Bridge'"-->,
+        Plugin_URL                          => <!-- tmpl_var bridge_Plugin_URL default="undef"-->,
+        Allow_Manual_Run                    => <!-- tmpl_var bridge_Allow_Manual_Run default="1"-->,
+        Manual_Run_Passcode                 => <!-- tmpl_var bridge_Manual_Run_Passcode default="undef"-->,
+        MessagesAtOnce                      => <!-- tmpl_var bridge_MessagesAtOnce default="100"-->,
+        Soft_Max_Size_Of_Any_Message        => <!-- tmpl_var bridge_Soft_Max_Size_Of_Any_Message default="1048576"-->,
+        Max_Size_Of_Any_Message             => <!-- tmpl_var bridge_Max_Size_Of_Any_Message default="2621440"-->,
         Allow_Open_Discussion_List          => 0,
-        Room_For_One_More_Check             => '<!-- tmpl_var bridge_Room_For_One_More_Check default="1"-->',
-        Enable_POP3_File_Locking            => '<!-- tmpl_var bridge_Enable_POP3_File_Locking default="1"-->',
-        Check_List_Owner_Return_Path_Header => '<!-- tmpl_var bridge_Check_List_Owner_Return_Path_Header default="1"-->',
-        Check_Multiple_Return_Path_Headers  => '<!-- tmpl_var bridge_Check_Multiple_Return_Path_Headers default="0"-->',
+        Room_For_One_More_Check             => <!-- tmpl_var bridge_Room_For_One_More_Check default="undef"-->,
+        Enable_POP3_File_Locking            => <!-- tmpl_var bridge_Enable_POP3_File_Locking default="undef"-->,
+        Check_List_Owner_Return_Path_Header => <!-- tmpl_var bridge_Check_List_Owner_Return_Path_Header default="undef"-->,
+        Check_Multiple_Return_Path_Headers  => <!-- tmpl_var bridge_Check_Multiple_Return_Path_Headers default="undef"-->,
 
     },
 
