An attempt to work on encoding. I feel like I'm chasing ghosts.

--- a/dada/templates/send_email_screen.tmpl
+++ b/dada/templates/send_email_screen.tmpl
@@ -14,7 +14,7 @@
 <div id="send_email_screen"></div> 
 <div id="screen_meta" data-menu_highlight="send_email"></div>
 
-<form name="mass_mailing" id="mass_mailing" enctype="multipart/form-data" action="<!-- tmpl_var S_PROGRAM_URL -->" method="post">
+<form name="mass_mailing" id="mass_mailing" action="<!-- tmpl_var S_PROGRAM_URL -->" method="post"  accept-charset="<!-- tmpl_var HTML_CHARSET -->">
 
 <div id="entire_form">
   <div id="form_widgets">
