Various fixes to try to make Subject Decoding work better - especially for Bridge.

--- a/dada/templates/list_breadcrumbs_widget.tmpl
+++ b/dada/templates/list_breadcrumbs_widget.tmpl
@@ -9,14 +9,14 @@
   <!-- tmpl_var list_settings.list_name -->
  </a>
  
-<!-- tmpl_if subject -->
+<!-- tmpl_if header_subject -->
 	 
 	 &#187;
 	 <a href="<!-- tmpl_var program_url -->/archive/<!-- tmpl_var list_settings.list -->/">
 	  Archives 
 	 </a>
 	 &#187;
-	 <!-- tmpl_var subject -->
+	 <!-- tmpl_var header_subject escape="HTML" -->
 	 
 <!--/tmpl_if-->
 
