--- a/dada/templates/archive_screen.tmpl
+++ b/dada/templates/archive_screen.tmpl
@@ -1,6 +1,6 @@
 <!-- begin archive_screen.tmpl -->
 
-<!-- tmpl_set name="title" value="<!-- tmpl_var subject escape=HTML -->" -->
+<!-- tmpl_set name="title" value="<!-- tmpl_var header_subject escape=HTML -->" -->
 
 <!-- tmpl_include name="list_breadcrumbs_widget.tmpl" -->
 
