--- a/dada/templates/amazon_ses_get_stats_widget.tmpl
+++ b/dada/templates/amazon_ses_get_stats_widget.tmpl
@@ -24,7 +24,7 @@
 					<!-- tmpl_var SentLast24Hours --> messages
 				</strong>
 	
-				have been sent in the last 24 hours.
+				have been reported as being sent in the last 24 hours.
 			</p>
 		<!-- tmpl_else --> 
 			<p>
