--- a/dada/templates/example_dada_config.tmpl
+++ b/dada/templates/example_dada_config.tmpl
@@ -312,7 +312,7 @@ $PLUGIN_CONFIGS = {
 		Plugin_URL                  => <!-- tmpl_var bounce_handler_Plugin_URL default="undef"-->,
 		Allow_Manual_Run            => <!-- tmpl_var bounce_handler_Allow_Manual_Run default="1"-->,
 		Manual_Run_Passcode         => <!-- tmpl_var bounce_handler_Manual_Run_Passcode default="undef"-->,
-		Enable_POP3_File_Locking    => <!-- tmpl_var bounce_handler_Enable_POP3_File_Locking default="1"-->, 
+        Enable_POP3_File_Locking    => <!-- tmpl_var bounce_handler_Enable_POP3_File_Locking default="undef"-->,
 		Log                         => undef,
 		MessagesAtOnce              => <!-- tmpl_var bounce_handler_MessagesAtOnce default="100"-->,
 		Max_Size_Of_Any_Message     => undef,
